[gd_scene load_steps=9 format=2]

[ext_resource path="res://Text.tres" type="Theme" id=1]
[ext_resource path="res://Notepads.gd" type="Script" id=2]
[ext_resource path="res://Text2.tres" type="Theme" id=3]
[ext_resource path="res://backgroud.jpg" type="Texture" id=4]
[ext_resource path="res://png/notepads..png" type="Texture" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0.756863 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0.662745 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0.54902 )

[node name="Notepads" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.840912
margin_right = 0.840942
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="backgroud" type="Sprite" parent="."]
position = Vector2( 400, 299.125 )
scale = Vector2( 2, 2.38345 )
texture = ExtResource( 4 )

[node name="Edit" type="TextEdit" parent="."]
margin_left = 48.0
margin_top = 56.0
margin_right = 748.0
margin_bottom = 586.0
theme = ExtResource( 3 )
custom_styles/read_only = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_styles/completion = SubResource( 3 )
highlight_current_line = true
show_line_numbers = true
draw_spaces = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="File" type="MenuButton" parent="."]
margin_left = 80.0
margin_top = 10.0
margin_right = 160.0
margin_bottom = 47.0
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 55.7655, 18.5 )
theme = ExtResource( 3 )
text = "文件"
items = [ "打开", null, 0, false, false, 0, 0, null, "", false, "保存", null, 0, true, false, 1, 0, null, "", false, "退出", null, 0, false, false, 3, 0, null, "", false ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Help" type="MenuButton" parent="."]
margin_left = 320.0
margin_top = 9.91161
margin_right = 400.0
margin_bottom = 46.9116
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 55.7655, 18.5 )
theme = ExtResource( 3 )
text = "帮助"
items = [ "关于", null, 0, false, false, 0, 0, null, "", false ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Opti" type="MenuButton" parent="."]
margin_left = 200.0
margin_top = 10.0
margin_right = 280.0
margin_bottom = 47.0
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 55.7655, 18.5 )
theme = ExtResource( 3 )
text = "设置"
items = [ "显示或关闭窗口框架", null, 0, false, false, 0, 0, null, "", false ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Open" type="FileDialog" parent="."]
margin_left = 147.227
margin_top = 170.999
margin_right = 577.227
margin_bottom = 453.999
theme = ExtResource( 3 )
popup_exclusive = true
window_title = "打开单个文件"
resizable = true
dialog_hide_on_ok = true
dialog_autowrap = true
mode = 0
access = 2
show_hidden_files = true
current_dir = "/项目/Plants VS Zombies"
current_path = "/项目/Plants VS Zombies/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="FileDialog" parent="."]
margin_left = 148.0
margin_top = 169.0
margin_right = 578.0
margin_bottom = 452.0
theme = ExtResource( 3 )
window_title = "保存文件"
access = 2
show_hidden_files = true
current_dir = "/项目/Plants VS Zombies"
current_path = "/项目/Plants VS Zombies/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="About" type="WindowDialog" parent="."]
margin_left = 84.0
margin_top = 105.0
margin_right = 691.0
margin_bottom = 532.0
theme = ExtResource( 3 )
window_title = "关于"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="About"]
anchor_right = 0.505
margin_top = 1.0
margin_right = 297.465
margin_bottom = 431.0
text = "这个是我给pvz庆生的
它开源
但使用源代码时，不要忘记写上我这
个作者的名字：ErrorDreemurr
谢谢了!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="About"]
margin_left = 2.0
margin_top = 119.0
margin_right = 609.0
margin_bottom = 340.0
rect_pivot_offset = Vector2( 78.764, 13.195 )
text = "https://github.com/ErrorDreemurr/Plants-VS-Zombies-NotePads/tags(可点击进入)"

[node name="notepads" type="Sprite" parent="."]
visible = false
position = Vector2( 30.0299, 34.1347 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
[connection signal="file_selected" from="Open" to="." method="_on_Open_file_selected"]
[connection signal="file_selected" from="Save" to="." method="_on_Save_file_selected"]
[connection signal="pressed" from="About/Button" to="." method="_on_Button_pressed"]
